# Gigrator

./: .editorconfig  .gitignore  LICENSE  Makefile  Pipfile  README.md  README_zh.md  WorkThread.py  config.py  config.yml  dev.md  gigrator.py  go.mod  go.sum  main.go  migrate.py  pyproject.toml  requirements.txt  settings.py  settings_example.py  setup.py
.github/workflows/: build.yml
api/: type.go
cmd/: root.go
gigrator/: config.py  gigrator.py  util.py
gigrator/git/: __init__.py  coding.py  e_gitee_v8.py  git.py  gitea.py  gitee.py  github.py  gitlab.py  gongfeng.py
